sass/site.scss
@import "screens";

/* Fonts */
$font-sans: Inter, Avenir, Helvetica, sans-serif;
$font-monospace: "Fira Code", "Source Code Pro", "IBX Plex Mono", "Consolas", "Menlo", "Courier", monospace;

/* Colors */

$bg-color-1: #FFFFFF; // Background
$tx-color-1: rgba(0, 0, 0, 0.8); // Primary
$tx-color-2: #065C84; // Link
$tx-color-3: rgba(0, 0, 0, 0.3); // Secondary
$tx-color-4: rgba(255, 255, 255, 0.8); // Code and code blocks
$tx-color-5: rgba(0, 0, 0, 0.6); // Tertiary
$border: rgb(229,231,235);

/* General style resets */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
	font-family: $font-sans;
	font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

@mixin center-x {
  margin: 0 auto;
}

/* Styles */

body {
  max-width: 73ch;
  width: 65%;
  @include lg { width: 80%; }
  @include sm { width: 100%; }
	padding: 2rem;
	background: $bg-color-1;
	color: $tx-color-1;
	@include center-x;
}

pre, code {
	color: $tx-color-4;
}

code {
  background: #2b303b;
  padding: 0.2rem 0.4rem;
  border-radius: 0.25rem;
  font-size: 0.8rem;
}

a {
  color: $tx-color-2;
}

nav {
  display: flex;
  flex-direction: row;
  gap: 2.5rem;
  padding-top: 1rem;
  // border-bottom: 1px solid rgba(0, 0, 0, 0.2);

  a {
  	color: $tx-color-1;
    text-decoration: none;
    color: $tx-color-5;
    font-weight: 500;
  }

  a:hover, a:focus {
    color: $tx-color-2;
    transition: 0.5s color ease-in-out;
  }

}

header {
  display: flex;
  flex-direction: column;
  margin: 5rem 0;
  row-gap: 1rem;

  h1 {
    font-size: 2.5rem;
  }

  p {
    font-size: 1.2rem;
    line-height: 1.5;
    color: $tx-color-5;
  }
}

.contact {
	// border-bottom: 1px solid $tx-color-5;
	padding-bottom: 1rem;

  p {
    line-height: 1.5;
  }

	h2 {
		font-size: 1.4rem;
		margin-bottom: 1rem;
	}

	
}

// For article previews on the main page
.post-previews {
  margin: 4rem 0;
  display: flex;
  flex-direction: column;
  row-gap: 1.5rem;

  article {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    h3 {
      font-size: 1.125rem;
    }

    p {
      font-size: 1rem;
      @include sm { font-size: 0.9rem; }
      line-height: 1.5;
    }
  }

  .summary {
    max-width: 80%;
  }
}

// For full page articles
.post {
  // width: 70%;
  // @include lg { width: 90%; }
  // @include sm { width: 100%; }
  display: block;
  margin: 3rem auto;

  // Credits to new.css
  address,
  area,
  aside,
  audio,
  blockquote,
  datalist,
  details,
  dl,
  fieldset,
  figure,
  form,
  input,
  iframe,
  img,
  meter,
  nav,
  ol,
  optgroup,
  option,
  output,
  p,
  pre,
  progress,
  ruby,
  section,
  table,
  textarea,
  ul,
  video {
  	margin-bottom: 1.5rem;
  }

  // We just don't want the extra
  // bottom spacing for lists
  // within lists
  li ul, li ol {
  	margin-bottom: 0;
  }

  img {
    display: block;
    width: 80%;
    max-height: 10rem;
    @include lg { width: 70%; }
    @include sm { width: 100%; }
    margin: 1.5rem auto;
  }

  .wide-img {
    display: block;
    width: 90%;
    max-height: revert;
    margin: 1.5rem auto;
  }

  .diagram {
    display: block;
    max-width: 80%;
    min-height: 15rem;
    margin: 1.5rem auto;
  }

  .mathcell {
  	// scroll long equations
  	overflow: auto;
  }

  h1, h2, h3, h4, h5 {
      margin: 1.5rem 0;
      line-height: 1.2;
  }

  h1 {
  	font-size: 2rem;
  }

  h2 {
    font-size: 1.6rem;
  }

  h3 {
    font-size: 1.3rem;
  }

  h4 {
    font-size: 1.2rem;
  }

  h5 {
    font-size: 1.12rem;
  }

  p, li {
    font-size: 1.06rem;
    line-height: 1.65;
    color: rgba(0, 0, 0, 0.8);
  }

  li {
      margin-left: 1.2rem;
      margin-top: 0.3rem;
      margin-bottom: 0.3rem;
  }

  pre {
    padding: 1rem;
    border-radius: 0.25rem;
  }

  pre code {
    display: block;
    width: 100%;
    overflow-x: auto;
    line-height: 1.5;
    font-size: 0.85rem;
  }

  .return-link {
    margin-top: 1.2rem;
  }

  blockquote {
	padding: 0.5rem 0 0.5rem 1rem;
	border-left: 3px solid rgba(0, 0, 0, 0.3);

	p {
	    margin-bottom: 0;
	    font-style: italic;
	}
 }

  table {
  		border-collapse: collapse;
  	}
  
  	table caption {
  		font-weight: bold;
  		margin-bottom: 0.5rem;
  	}
  
  	td, th {
  		text-align: left;
  		padding: 0.5rem;

  		code {
  			color: magenta;
  			background: none;
  		}

      img {
        height: 6rem;
        width: auto;
        margin: auto;
      }
  	}
  
  	tr {
  		border-bottom: 1px solid $border;
  	}

    .footnote-definition {
      display: flex;
      flex-direction: row;
    }
}


.api {
	font-family: $font-monospace;
	font-weight: normal;

	.function {
		color: magenta;
	}
}

